// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneralInformationSection should match a snapshot when isListed equal to false 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Formik
    initialValues={Object {}}
    onSubmit={[Function]}
  >
    <Form>
      <form
        action="#"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <GeneralInformationSection
          isFreeVal={false}
          isListed={false}
        >
          <FormSection
            data-test="submit-app-form"
          >
            <div
              className="form-section"
            >
              <Helper>
                <div
                  className="notification helper-wrap helper-info"
                >
                  For more information on how to complete this form, please view our "Step-by-step" guide 
                  <a
                    className="l3gjl5x-link"
                    href="https://foundations-documentation.reapit.cloud/developer-portal"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    here
                  </a>
                </div>
              </Helper>
              <FormHeading>
                <div
                  className="form-heading"
                >
                  App Listing
                </div>
              </FormHeading>
              <FormSubHeading>
                <div
                  className="form-subheading"
                >
                  The section below relates to the fields that comprise the listing of your application as it will appear to a user in the Marketplace. It also includes details we will use to enable us to contact you about your submitted application, how best to make your app discoverable to users and to determine where to launch it from the marketplace. When you have done your initial app setup and you are ready to list your app in the Marketplace, please return here and select “Submit for Approval”.
                </div>
              </FormSubHeading>
              <Grid
                isMultiLine={true}
              >
                <div
                  className="columns is-multiline"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-name"
                        id="name"
                        labelText="Name"
                        name="name"
                        placeholder="The name of your app as it will appear to users"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="name"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="name"
                              >
                                Name
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-name"
                                disabled={false}
                                id="name"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The name of your app as it will appear to users"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <div
                        className="control"
                      >
                        <div
                          className="ctlfpkh-checkbox"
                        >
                          <Checkbox
                            id="isListed"
                            labelText="Submit for approval"
                            name="isListed"
                          >
                            <div
                              className="field "
                            >
                              <div
                                className="control"
                              >
                                <Field
                                  name="isListed"
                                  type="checkbox"
                                >
                                  <div
                                    className="field field-checkbox"
                                  >
                                    <input
                                      checked={false}
                                      className="checkbox"
                                      data-test=""
                                      id="isListed"
                                      onChange={[Function]}
                                      type="checkbox"
                                      value=""
                                    />
                                    <label
                                      className="label"
                                      htmlFor="isListed"
                                    >
                                      Submit for approval
                                    </label>
                                  </div>
                                </Field>
                              </div>
                            </div>
                          </Checkbox>
                        </div>
                      </div>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <SelectBox
                        id="categoryId"
                        labelText="Category"
                        name="categoryId"
                        options={Array []}
                      >
                        <Field
                          name="categoryId"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control"
                            >
                              <label
                                className="label "
                                htmlFor="categoryId"
                              >
                                Category
                              </label>
                              <select
                                className="input is-primary "
                                data-test=""
                                name="categoryId"
                                onBlur={[Function]}
                                onChange={[Function]}
                                value=""
                              >
                                <option
                                  disabled={true}
                                  hidden={true}
                                  value=""
                                >
                                  Please select
                                </option>
                              </select>
                            </div>
                          </div>
                        </Field>
                      </SelectBox>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-home-page"
                        id="homePage"
                        labelText="Home page"
                        name="homePage"
                        placeholder="Your company homepage. HTTP:// or HTTPS://"
                        required={false}
                        type="text"
                      >
                        <Field
                          name="homePage"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="homePage"
                              >
                                Home page
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-home-page"
                                disabled={false}
                                id="homePage"
                                name="homePage"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Your company homepage. HTTP:// or HTTPS://"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-support-email"
                        id="supportEmail"
                        labelText="Support email"
                        name="supportEmail"
                        placeholder="The contact to your support team if your users have a problem"
                        required={false}
                        type="email"
                      >
                        <Field
                          name="supportEmail"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="supportEmail"
                              >
                                Support email
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-support-email"
                                disabled={false}
                                id="supportEmail"
                                name="supportEmail"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The contact to your support team if your users have a problem"
                                type="email"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-launch-uri"
                        id="launchUri"
                        labelText="Launch URI"
                        name="launchUri"
                        placeholder="The launch page for your app. HTTPS only other than for http://localhost"
                        required={false}
                        type="text"
                      >
                        <Field
                          name="launchUri"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="launchUri"
                              >
                                Launch URI
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-launch-uri"
                                disabled={false}
                                id="launchUri"
                                name="launchUri"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The launch page for your app. HTTPS only other than for http://localhost"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <div
                        className="pb-4"
                      >
                        <Input
                          dataTest="submit-app-phone"
                          id="telephone"
                          labelText="Telephone"
                          name="telephone"
                          placeholder="Should one of our developers need to contact you about your app"
                          required={false}
                          type="tel"
                        >
                          <Field
                            name="telephone"
                            validate={null}
                          >
                            <div
                              className="field"
                            >
                              <div
                                className="control "
                              >
                                <label
                                  className="label inline-block "
                                  htmlFor="telephone"
                                >
                                  Telephone
                                </label>
                                <input
                                  className="input is-primary"
                                  data-test="submit-app-phone"
                                  disabled={false}
                                  id="telephone"
                                  name="telephone"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  placeholder="Should one of our developers need to contact you about your app"
                                  type="tel"
                                  value=""
                                />
                              </div>
                            </div>
                          </Field>
                        </Input>
                      </div>
                      <TextArea
                        dataTest="submit-app-summary"
                        id="summary"
                        labelText="Summary"
                        name="summary"
                        placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
                        required={false}
                      >
                        <Field
                          name="summary"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control"
                            >
                              <label
                                className="label mb-2"
                                htmlFor="summary"
                              >
                                Summary
                              </label>
                              <textarea
                                className="textarea is-primary"
                                data-test="submit-app-summary"
                                id="summary"
                                name="summary"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
                              />
                            </div>
                          </div>
                        </Field>
                      </TextArea>
                    </div>
                  </GridItem>
                  <GridItem
                    className="is-half-desktop"
                  >
                    <div
                      className="column is-half-desktop"
                      data-test=""
                    >
                      <TextAreaEditor
                        actions={
                          Array [
                            "bold",
                            "italic",
                            "paragraph",
                            "olist",
                            "ulist",
                            "link",
                            Object {
                              "icon": "<b>H<sub>5</sub></b>",
                              "name": "test",
                              "result": [Function],
                              "title": "Add heading 5",
                            },
                          ]
                        }
                        containerClass="e1pmlq1f-editor"
                        dataTest="submit-app-description"
                        id="description"
                        labelText="Description"
                        name="description"
                        placeholder="A detailed description for your app listing. Must be between 150 and 1500 characters. Please note: As this field supports HTML, special characters will be included in the character count"
                        required={false}
                      >
                        <div
                          className="field"
                        >
                          <div
                            className="control"
                          >
                            <label
                              className="label "
                              htmlFor="description"
                            >
                              Description
                            </label>
                            <Editor
                              actions={
                                Array [
                                  "bold",
                                  "italic",
                                  "paragraph",
                                  "olist",
                                  "ulist",
                                  "link",
                                  Object {
                                    "icon": "<b>H<sub>5</sub></b>",
                                    "name": "test",
                                    "result": [Function],
                                    "title": "Add heading 5",
                                  },
                                ]
                              }
                              containerClass="e1pmlq1f-editor"
                              dataTest="submit-app-description"
                              hasError={false}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onPaste={[Function]}
                              placeholder="A detailed description for your app listing. Must be between 150 and 1500 characters. Please note: As this field supports HTML, special characters will be included in the character count"
                            >
                              <div
                                className="pell false e1pmlq1f-editor"
                                data-test="submit-app-description"
                                onBlur={[Function]}
                                onPaste={[Function]}
                              />
                            </Editor>
                          </div>
                        </div>
                      </TextAreaEditor>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-terms-conditions"
                        id="termsAndConditionsUrl"
                        labelText="Terms and Conditions"
                        name="termsAndConditionsUrl"
                        placeholder="URL to link to your Terms and Conditions"
                        required={false}
                        type="text"
                      >
                        <Field
                          name="termsAndConditionsUrl"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="termsAndConditionsUrl"
                              >
                                Terms and Conditions
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-terms-conditions"
                                disabled={false}
                                id="termsAndConditionsUrl"
                                name="termsAndConditionsUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Terms and Conditions"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-privacy-policy"
                        id="privacyPolicyUrl"
                        labelText="Privacy Policy"
                        name="privacyPolicyUrl"
                        placeholder="URL to link to your Privacy Policy"
                        required={false}
                        type="text"
                      >
                        <Field
                          name="privacyPolicyUrl"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="privacyPolicyUrl"
                              >
                                Privacy Policy
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-privacy-policy"
                                disabled={false}
                                id="privacyPolicyUrl"
                                name="privacyPolicyUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Privacy Policy"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-terms-conditions"
                        disabled={false}
                        id="pricingUrl"
                        labelText="Pricing Info"
                        name="pricingUrl"
                        placeholder="URL to link to your Pricing Info"
                        type="text"
                      >
                        <Field
                          name="pricingUrl"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="pricingUrl"
                              >
                                Pricing Info
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-terms-conditions"
                                disabled={false}
                                id="pricingUrl"
                                name="pricingUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Pricing Info"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <label
                        className="label inline-block"
                      >
                         
                      </label>
                      <Checkbox
                        id="isFree"
                        labelText="This application is free"
                        name="isFree"
                      >
                        <div
                          className="field "
                        >
                          <div
                            className="control"
                          >
                            <Field
                              name="isFree"
                              type="checkbox"
                            >
                              <div
                                className="field field-checkbox"
                              >
                                <input
                                  checked={false}
                                  className="checkbox"
                                  data-test=""
                                  id="isFree"
                                  onChange={[Function]}
                                  type="checkbox"
                                  value=""
                                />
                                <label
                                  className="label"
                                  htmlFor="isFree"
                                >
                                  This application is free
                                </label>
                              </div>
                            </Field>
                          </div>
                        </div>
                      </Checkbox>
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </div>
          </FormSection>
        </GeneralInformationSection>
      </form>
    </Form>
  </Formik>
</Provider>
`;

exports[`GeneralInformationSection should match a snapshot when isListed equal to true 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Formik
    initialValues={Object {}}
    onSubmit={[Function]}
  >
    <Form>
      <form
        action="#"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <GeneralInformationSection
          isFreeVal={false}
          isListed={true}
        >
          <FormSection
            data-test="submit-app-form"
          >
            <div
              className="form-section"
            >
              <Helper>
                <div
                  className="notification helper-wrap helper-info"
                >
                  For more information on how to complete this form, please view our "Step-by-step" guide 
                  <a
                    className="l3gjl5x-link"
                    href="https://foundations-documentation.reapit.cloud/developer-portal"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    here
                  </a>
                </div>
              </Helper>
              <FormHeading>
                <div
                  className="form-heading"
                >
                  App Listing
                </div>
              </FormHeading>
              <FormSubHeading>
                <div
                  className="form-subheading"
                >
                  The section below relates to the fields that comprise the listing of your application as it will appear to a user in the Marketplace. It also includes details we will use to enable us to contact you about your submitted application, how best to make your app discoverable to users and to determine where to launch it from the marketplace. When you have done your initial app setup and you are ready to list your app in the Marketplace, please return here and select “Submit for Approval”.
                </div>
              </FormSubHeading>
              <Grid
                isMultiLine={true}
              >
                <div
                  className="columns is-multiline"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-name"
                        id="name"
                        labelText="Name"
                        name="name"
                        placeholder="The name of your app as it will appear to users"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="name"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="name"
                              >
                                Name
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-name"
                                disabled={false}
                                id="name"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The name of your app as it will appear to users"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <div
                        className="control"
                      >
                        <div
                          className="ctlfpkh-checkbox"
                        >
                          <Checkbox
                            id="isListed"
                            labelText="Status: Listed"
                            name="isListed"
                          >
                            <div
                              className="field "
                            >
                              <div
                                className="control"
                              >
                                <Field
                                  name="isListed"
                                  type="checkbox"
                                >
                                  <div
                                    className="field field-checkbox"
                                  >
                                    <input
                                      checked={false}
                                      className="checkbox"
                                      data-test=""
                                      id="isListed"
                                      onChange={[Function]}
                                      type="checkbox"
                                      value=""
                                    />
                                    <label
                                      className="label"
                                      htmlFor="isListed"
                                    >
                                      Status: Listed
                                    </label>
                                  </div>
                                </Field>
                              </div>
                            </div>
                          </Checkbox>
                        </div>
                      </div>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <SelectBox
                        id="categoryId"
                        labelText="Category"
                        name="categoryId"
                        options={Array []}
                      >
                        <Field
                          name="categoryId"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control"
                            >
                              <label
                                className="label "
                                htmlFor="categoryId"
                              >
                                Category
                              </label>
                              <select
                                className="input is-primary "
                                data-test=""
                                name="categoryId"
                                onBlur={[Function]}
                                onChange={[Function]}
                                value=""
                              >
                                <option
                                  disabled={true}
                                  hidden={true}
                                  value=""
                                >
                                  Please select
                                </option>
                              </select>
                            </div>
                          </div>
                        </Field>
                      </SelectBox>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-home-page"
                        id="homePage"
                        labelText="Home page"
                        name="homePage"
                        placeholder="Your company homepage. HTTP:// or HTTPS://"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="homePage"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="homePage"
                              >
                                Home page
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-home-page"
                                disabled={false}
                                id="homePage"
                                name="homePage"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Your company homepage. HTTP:// or HTTPS://"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-support-email"
                        id="supportEmail"
                        labelText="Support email"
                        name="supportEmail"
                        placeholder="The contact to your support team if your users have a problem"
                        required={true}
                        type="email"
                      >
                        <Field
                          name="supportEmail"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="supportEmail"
                              >
                                Support email
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-support-email"
                                disabled={false}
                                id="supportEmail"
                                name="supportEmail"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The contact to your support team if your users have a problem"
                                type="email"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-launch-uri"
                        id="launchUri"
                        labelText="Launch URI"
                        name="launchUri"
                        placeholder="The launch page for your app. HTTPS only other than for http://localhost"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="launchUri"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="launchUri"
                              >
                                Launch URI
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-launch-uri"
                                disabled={false}
                                id="launchUri"
                                name="launchUri"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The launch page for your app. HTTPS only other than for http://localhost"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <div
                        className="pb-4"
                      >
                        <Input
                          dataTest="submit-app-phone"
                          id="telephone"
                          labelText="Telephone"
                          name="telephone"
                          placeholder="Should one of our developers need to contact you about your app"
                          required={true}
                          type="tel"
                        >
                          <Field
                            name="telephone"
                            validate={[Function]}
                          >
                            <div
                              className="field"
                            >
                              <div
                                className="control "
                              >
                                <label
                                  className="label inline-block required-label"
                                  htmlFor="telephone"
                                >
                                  Telephone
                                </label>
                                <input
                                  className="input is-primary"
                                  data-test="submit-app-phone"
                                  disabled={false}
                                  id="telephone"
                                  name="telephone"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  placeholder="Should one of our developers need to contact you about your app"
                                  type="tel"
                                  value=""
                                />
                              </div>
                            </div>
                          </Field>
                        </Input>
                      </div>
                      <TextArea
                        dataTest="submit-app-summary"
                        id="summary"
                        labelText="Summary"
                        name="summary"
                        placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
                        required={true}
                      >
                        <Field
                          name="summary"
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control"
                            >
                              <label
                                className="label mb-2 required-label"
                                htmlFor="summary"
                              >
                                Summary
                              </label>
                              <textarea
                                className="textarea is-primary"
                                data-test="submit-app-summary"
                                id="summary"
                                name="summary"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
                              />
                            </div>
                          </div>
                        </Field>
                      </TextArea>
                    </div>
                  </GridItem>
                  <GridItem
                    className="is-half-desktop"
                  >
                    <div
                      className="column is-half-desktop"
                      data-test=""
                    >
                      <TextAreaEditor
                        actions={
                          Array [
                            "bold",
                            "italic",
                            "paragraph",
                            "olist",
                            "ulist",
                            "link",
                            Object {
                              "icon": "<b>H<sub>5</sub></b>",
                              "name": "test",
                              "result": [Function],
                              "title": "Add heading 5",
                            },
                          ]
                        }
                        containerClass="e1pmlq1f-editor"
                        dataTest="submit-app-description"
                        id="description"
                        labelText="Description"
                        name="description"
                        placeholder="A detailed description for your app listing. Must be between 150 and 1500 characters. Please note: As this field supports HTML, special characters will be included in the character count"
                        required={true}
                      >
                        <div
                          className="field"
                        >
                          <div
                            className="control"
                          >
                            <label
                              className="label required-label"
                              htmlFor="description"
                            >
                              Description
                            </label>
                            <Editor
                              actions={
                                Array [
                                  "bold",
                                  "italic",
                                  "paragraph",
                                  "olist",
                                  "ulist",
                                  "link",
                                  Object {
                                    "icon": "<b>H<sub>5</sub></b>",
                                    "name": "test",
                                    "result": [Function],
                                    "title": "Add heading 5",
                                  },
                                ]
                              }
                              containerClass="e1pmlq1f-editor"
                              dataTest="submit-app-description"
                              hasError={false}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onPaste={[Function]}
                              placeholder="A detailed description for your app listing. Must be between 150 and 1500 characters. Please note: As this field supports HTML, special characters will be included in the character count"
                            >
                              <div
                                className="pell false e1pmlq1f-editor"
                                data-test="submit-app-description"
                                onBlur={[Function]}
                                onPaste={[Function]}
                              />
                            </Editor>
                          </div>
                        </div>
                      </TextAreaEditor>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-terms-conditions"
                        id="termsAndConditionsUrl"
                        labelText="Terms and Conditions"
                        name="termsAndConditionsUrl"
                        placeholder="URL to link to your Terms and Conditions"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="termsAndConditionsUrl"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="termsAndConditionsUrl"
                              >
                                Terms and Conditions
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-terms-conditions"
                                disabled={false}
                                id="termsAndConditionsUrl"
                                name="termsAndConditionsUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Terms and Conditions"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-privacy-policy"
                        id="privacyPolicyUrl"
                        labelText="Privacy Policy"
                        name="privacyPolicyUrl"
                        placeholder="URL to link to your Privacy Policy"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="privacyPolicyUrl"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="privacyPolicyUrl"
                              >
                                Privacy Policy
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-privacy-policy"
                                disabled={false}
                                id="privacyPolicyUrl"
                                name="privacyPolicyUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Privacy Policy"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-terms-conditions"
                        disabled={false}
                        id="pricingUrl"
                        labelText="Pricing Info"
                        name="pricingUrl"
                        placeholder="URL to link to your Pricing Info"
                        type="text"
                      >
                        <Field
                          name="pricingUrl"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="pricingUrl"
                              >
                                Pricing Info
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-terms-conditions"
                                disabled={false}
                                id="pricingUrl"
                                name="pricingUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Pricing Info"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <label
                        className="label inline-block"
                      >
                         
                      </label>
                      <Checkbox
                        id="isFree"
                        labelText="This application is free"
                        name="isFree"
                      >
                        <div
                          className="field "
                        >
                          <div
                            className="control"
                          >
                            <Field
                              name="isFree"
                              type="checkbox"
                            >
                              <div
                                className="field field-checkbox"
                              >
                                <input
                                  checked={false}
                                  className="checkbox"
                                  data-test=""
                                  id="isFree"
                                  onChange={[Function]}
                                  type="checkbox"
                                  value=""
                                />
                                <label
                                  className="label"
                                  htmlFor="isFree"
                                >
                                  This application is free
                                </label>
                              </div>
                            </Field>
                          </div>
                        </div>
                      </Checkbox>
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </div>
          </FormSection>
        </GeneralInformationSection>
      </form>
    </Form>
  </Formik>
</Provider>
`;
